tests/profile/error/version/wrongtype_minor.profile
{
  "version": { "major": 1.0, "minor": "xyz" }
}
